--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -17,7 +17,6 @@ services:
       - ".:/usr/test"
 
   test:
-    build: ../
     command: /usr/test/test.sh
     environment:
       - CONSUL_HTTP_ADDR=http://consul:8500
@@ -25,9 +24,11 @@ services:
     depends_on:
       - consul
       - init
+    image: hashicorp/consul-template:alpine
     volumes:
       - "../src:/consul-template"
       - ".:/usr/test"
+    working_dir: /consul-template
 
   test-consul:
     image: consul
