--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     command: /usr/test/test.sh
     environment:
       - CONSUL_HTTP_ADDR=http://consul:8500
-      - NAMESPACE=${NAMESPACE}
+      - CONTEXT=${CONTEXT}
     depends_on:
       - consul
       - init
